# haskell-databases-talk

./: .gitignore  LICENSE  README.md  haskell-databases-talk.cabal
app/: Main.hs
app/Views/: Table.hs
migrations/: test-data.sql  v1.sql
presentation/: haskell-databases.org
src/CoinExchange/: Entities.hs  Models.hs
src/Persistent/: Entities.hs  Models.hs
