name:                haskell-databases-talk
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/chrisbarrett/haskell-databases-talk#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Barrett
maintainer:          chris.d.barrett@me.com
copyright:           Chris Barrett
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CoinExchange.Models
  build-depends:       base >= 4.7 && < 5
                     , monad-logger
                     , lens
                     , persistent
                     , persistent-postgresql
                     , persistent-template
                     , esqueleto
                     , text
                     , transformers
                     , mtl
  default-language:    Haskell2010

executable haskell-databases-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-databases-talk
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/chrisbarrett/haskell-databases-talk
